--- a/gotjokes/public/index.html
+++ b/gotjokes/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-
+<link href="https://fonts.googleapis.com/css?family=Gamja+Flower" rel="stylesheet">
 
     <title>React App</title>
   </head>
