--- a/gotjokes/public/index.html
+++ b/gotjokes/public/index.html
@@ -26,7 +26,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Gamja+Flower" rel="stylesheet">
 
-    <title>React App</title>
+    <title>WynJoke!</title>
   </head>
   <body>
     <noscript>
